MainActivity.kt completed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="logout">Logout</string>
     <string name="open">Open</string>
     <string name="close">Close</string>
+
+    <string name="story1_title">My first story</string>
+    <string name="story1_subtitle">This is subtitle</string>
+    <string name="story1_desc">In this bootcamp I learnt kotlin</string>
 </resources>
